fullSandbox11072023/force-app/main/default/objects/Influence__c/Influence__c.object-meta.xml
<CustomObject>
    <label>User Influence</label>
    <nameField>
        <displayFormat>I-{0000}</displayFormat>
        <label>Influence Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>User Influences</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>