fullSandbox11072023/force-app/main/default/objects/Influence__c/fields/Avg_Interactions_Post__c.field-meta.xml
<CustomField>
    <fullName>Avg_Interactions_Post__c</fullName>
    <formula>if(  Posts_Created__c &gt; 0, ( Comments_Received__c +  Likes_Received__c ) /  Posts_Created__c, 0 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Avg. Interactions/Post</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>