fullSandbox11072023/force-app/main/default/objects/Influence__c/fields/ChatterRank__c.field-meta.xml
<CustomField>
    <fullName>ChatterRank__c</fullName>
    <formula>MAX( 100 - ( FLOOR(( Ranking__c * 100 ) / Influence_Parent__r.Total_Records__c )), 1 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ChatterRank</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>