fullSandbox11072023/force-app/main/default/objects/Influence__c/fields/Comments_Per_Day__c.field-meta.xml
<CustomField>
    <fullName>Comments_Per_Day__c</fullName>
    <formula>if( Days_with_Comments__c &gt; 0, ( Comments_Received__c +  Likes_Received__c ) /  Days_with_Comments__c, 0 )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Avg. Interactions/Day</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>