fullSandbox11072023/force-app/main/default/objects/Influence__c/fields/CR_Rank__c.field-meta.xml
<CustomField>
    <fullName>CR_Rank__c</fullName>
    <label>CR Rank</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>