fullSandbox11072023/force-app/main/default/objects/Influence__c/fields/Days_with_Comments__c.field-meta.xml
<CustomField>
    <fullName>Days_with_Comments__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Days with Comments</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>