fullSandbox11072023/force-app/main/default/objects/Influence__c/fields/Followers__c.field-meta.xml
<CustomField>
    <fullName>Followers__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Followers</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>