fullSandbox11072023/force-app/main/default/objects/Influence__c/fields/Influence_Formula__c.field-meta.xml
<CustomField>
    <fullName>Influence_Formula__c</fullName>
    <formula>( ( 40 * ( Influence_Parent__r.Total_Records__c -  AIP_Rank__c ) ) + ( 25 * ( Influence_Parent__r.Total_Records__c -  PR_Rank__c ) ) + ( 20 * ( Influence_Parent__r.Total_Records__c -  ACD_Rank__c ) ) + ( 10 * ( Influence_Parent__r.Total_Records__c -  F_Rank__c ) ) + ( 5 * ( Influence_Parent__r.Total_Records__c -  CC_Rank__c ) ) / 100 ) / Influence_Parent__r.Total_Records__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Influence Formula</label>
    <precision>18</precision>
    <scale>3</scale>
    <type>Number</type>
</CustomField>