fullSandbox11072023/force-app/main/default/objects/Influence__c/fields/Likes_Received_Rank__c.field-meta.xml
<CustomField>
    <fullName>Likes_Received_Rank__c</fullName>
    <label>Likes Received Rank</label>
    <precision>10</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>