fullSandbox11072023/force-app/main/default/objects/Influence__c/fields/Posts_Created__c.field-meta.xml
<CustomField>
    <fullName>Posts_Created__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Posts Created</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>