fullSandbox11072023/force-app/main/default/objects/Influence__c/fields/Ranking__c.field-meta.xml
<CustomField>
    <fullName>Ranking__c</fullName>
    <label>Ranking</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>